# reticulum_mobile_emergency_management

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cargo_check_errors.txt  design.md  package-lock.json  package.json  pixel_ui.xml  playwright.config.ts  poco_ui.xml  stitch_app.js  stitch_base.js  stitch_getproject_response.txt  stitch_listscreens_response.txt  stitch_project_page.html  tmp_pixel_app_state.db  tmp_pixel_app_state_after_delete.db  tmp_poco_app_state_after_delete.db
.github/workflows/: plugins.yml  rust.yml
.playwright-mcp/: page-2026-04-24T15-12-52-235Z.yml  page-2026-04-24T17-16-55-470Z.yml  page-2026-04-24T17-18-33-442Z.yml
apps/: tmp-playwright-ui.err
apps/mobile/: .env.mobile  .env.web  README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/android/: .gitignore  capacitor.settings.gradle  gradle.properties  variables.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/ios/App/: Podfile
apps/mobile/src/: App.vue  env.d.ts  main.ts  router.ts  styles.css
apps/mobile/src/components/: ActionMessageItem.vue  ActionMessageList.vue  ActionMessageTable.vue  PeerRow.vue  StatusPill.vue  TopServiceCards.vue
apps/mobile/src/composables/: useSetupWizard.ts
apps/mobile/src/plugins/: pluginSettings.ts
apps/mobile/src/services/: hubRegistryBootstrap.ts  notifications.ts  operationalNotifications.ts  peerExchange.ts  setupPermissions.ts  telemetry.ts  telemetryLocationPlugin.ts
apps/mobile/src/stores/: checklistsStore.ts  eventsStore.ts  messagesStore.ts  messagingStore.ts  nodeStore.ts  sosStore.ts  telemetryStore.ts  wearablesStore.ts
apps/mobile/src/types/: domain.ts
apps/mobile/src/utils/: actionMessageStatus.ts  checklists.ts  eamMissionSync.ts  legacyState.ts  missionSync.ts  peers.ts  r3akt.ts  replicationParser.ts  runtimeProfile.ts  setupWizardState.ts  tcpCommunityServers.ts
apps/mobile/src/views/: ActionMessagesView.vue  BioSensorsView.vue  ChecklistDetailView.vue  ChecklistView.vue  CheclklistView.vue  DashboardView.vue  EventsView.vue  InboxView.vue  MessageStatusHelpView.vue  PeersDiscoveryView.vue  SettingsView.vue  SetupWizardView.vue  TelemetryMapView.vue
crates/reticulum_mobile/: Cargo.toml  build.rs
crates/reticulum_mobile/reticulum-mobile/: app_state.db
crates/reticulum_mobile/src/: announce_compat.rs  app_state.rs  event_bus.rs  jni_bridge.rs  lib.rs  logger.rs  lxmf_fields.rs  messaging_compat.rs  mission_sync.rs  node.rs  reticulum_mobile.udl  runtime.rs  runtime_projection.rs  sdk_bridge.rs  sos.rs  sos_detector.rs  sos_fields.rs  types.rs
crates/reticulum_mobile/src/plugins/: abi.rs  abi_c.rs  catalog.rs  host_api.rs  installer.rs  loader.rs  manager.rs  manifest.rs  messages.rs  mod.rs  permissions.rs  registry.rs
crates/reticulum_mobile/src/wearables/: events.rs  ingestion.rs  mod.rs  registry.rs
crates/reticulum_mobile/tests/: plugin_manifest.rs
docs/: architecture.md  userManual.md
docs/API/: EmergencyActionMessageManagement-OAS.yaml
docs/R3AKTClient/: APIANnalysis.md  APIANnalysis_clientImplementationSet.md  R3AKT_client_CODEX_Implementation_plan.md  r3aktClient_implementationPlan.md
docs/plans/: Reticulum_Mobile_CODEX_Implementation_Prompt.md  performancePlan.md  performancePlan2.md
docs/plugins/: android-native-plugin-system-plan.md  android-native-plugin-system.md  building-a-plugin.md  c-abi-guide.md  example-plugin-walkthrough.md  plugin-manifest.md  plugin-permissions.md  signing-trust-model.md  storage-and-events.md
docs/wearables/: ble-heart-rate.md
e2e/: action-messages.spec.ts  dashboard.spec.ts  events.spec.ts  peers-connect.spec.ts  settings.spec.ts  setup-wizard.spec.ts  telemetry.spec.ts
e2e/support/: app.ts
plugins/example-status-plugin/: README.md  plugin.toml
plugins/example-status-plugin/rust/: Cargo.toml
plugins/example-status-plugin/rust/src/: lib.rs
plugins/example-status-plugin/schemas/: status_test.schema.json
plugins/example-status-plugin/ui/: settings.schema.json
tools/codegen/: README.md  generate-uniffi-bindings.ps1  generate-uniffi-bindings.sh
tools/rem-plugin-packager/: Cargo.toml
tools/rem-plugin-packager/src/: main.rs
tools/uniffi-bindgen/: Cargo.toml
(+38 files in other folders)
