[package]
name = "reticulum_mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
legacy-lxmf-runtime = []

[dependencies]
reticulum = { package = "reticulum-rs", git = "https://github.com/FreeTAKTeam/Reticulum-rs" }
base64 = "0.22"
crossbeam-channel = "0.5"
csv = "1.3"
fs-err = "2.11.0"
hex = "0.4"
jni = "0.21"
log = "0.4"
lxmf = { package = "lxmf-core", path = "../../../LXMF-rs/crates/libs/lxmf-core", default-features = false, features = ["std"] }
lxmf-sdk = { path = "../../../LXMF-rs/crates/libs/lxmf-sdk", default-features = false, features = ["std"] }
rmp-serde = "1"
rmpv = "1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.10.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.44.2", features = ["full"] }
uniffi = "0.28"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
