[package]
name = "rem-plugin-packager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
fs-err = "2.11"
semver = "1"
serde_json = "1"
thiserror = "1"
toml = "0.8"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
