[package]
name = "rem-plugin-packager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
fs-err = "2.11"
hex = "0.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
